fixed word-wrap, more specificity.. fixes arabic map labels

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -8,7 +8,7 @@
     position:relative;
 }
 
-.bbc-news-vj-wrapper p {
+.bbc-news-vj-wrapper .section--method p {
     word-wrap: break-word; // fix long links
 }
 
